namespace Assets.Constants
{
    internal static class AnimationStates
    {
        public static string IsJump = "isJump";
        public static string IsMove = "isMove";
        public static string Attack = "Attack";
        public static string StrongAttack = "StrongAttack";
        public static string Walk = "Walk";
        public static string Run = "Run";
        public static string Eat = "Eat";
        public static string TurnHead = "Turn Head";
        public static string Death = "Death";
    }
}